<resources>
    <string name="app_name">Proxima</string>
    <string name="enable_nfc">Please, enable NFC</string>

    <string name="home_message_default">Tap on the button to start searching</string>
    <string name="home_message_first_search">Approach the device to your tag</string>
    <string name="home_message_second_search">Approach the device to the patient tag</string>
    <string name="home_message_sending_request">Retrieving data…</string>

    <string name="home_button_text_default">Search</string>
    <string name="home_button_text_stop_searching">Stop searching</string>

    <string name="no_nfc_error">This device doesn\'t support NFC.</string>
    <string name="home_title_alt">Proxima</string>
    <string name="data_toolbar_title">Medical Data</string>

    <string name="data_name">Name</string>
    <string name="data_surname">Surname</string>
    <string name="data_fiscal_code">Fiscal Code</string>
    <string name="data_age">Age</string>
    <string name="data_blood_group">Blood Group</string>
    <string name="data_organ_donor">Organ Donor</string>
    <string name="data_medical_conditions">Medical Conditions</string>
    <string name="data_drug_allergies">Drug Allergies</string>
    <string name="data_other_allergies">Other Allergies</string>
    <string name="data_medications">Medications</string>
    <string name="parse_error">Parse Error.</string>
    <string name="home_message_printing_data">Loading…</string>


    <string name="json_creation_error">Error while creating JSON object</string>
    <string name="io_error">I/O error</string>
    <string name="invalid_key_specification_error">Invalid key specification</string>
    <string name="error_rsa">This device doesn\'t support RSA</string>
    <string name="signature_error">Unable to create signature</string>
    <string name="key_null_error">Key is not initialized</string>
    <string name="connection_error">Connection error</string>
    <string name="unauthorized_error">You are not authorized to consult this patient data</string>
    <string name="unknown_error">Unknown error from server</string>
    <string name="home_message_no_server_available">Server is not available</string>
    <string name="mime_error">Check your mime type</string>
</resources>
